nice drawer bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="search_title">Search</string>
     <string name="open_the_drawer">open the drawer</string>
     <string name="close_the_drawer">close the drawer</string>
+    <string name="logout">LOGOUT</string>
+    <string name="settings">SETTINGS</string>
+    <string name="your_lunch">YOUR LUNCH</string>
 </resources>
+
