--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="logout">LOGOUT</string>
     <string name="settings">SETTINGS</string>
     <string name="your_lunch">YOUR LUNCH</string>
+    <string name="center_on_me">Center on me</string>
 </resources>
 
