--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Go4Lunch</string>
+    <string name="preferences_file">preferences_file</string>
     <string name="fragment_1_title">"I'm Hungry"</string>
     <string name="nav_1">Map View</string>
     <string name="nav_2">List View</string>
