--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,13 +15,14 @@
     <string name="center_on_me">Center on me</string>
     <string name="credits_text">© OpenStreetMap contributors\n(openstreetmap.org, nominatim.org)</string>
     <string name="credits">Credits:</string>
-    <string name="login_text">Login to share meals with your colleagues</string>
-    <string name="permissions_button">Request GPS &amp; Internet permissions</string>
+    <string name="login_text">to share meals with your colleagues</string>
+    <string name="permissions_button">Request GPS permission</string>
     <string name="login_button">Login</string>
     <string name="going_at_noon">Going at noon</string>
     <string name="call">CALL</string>
     <string name="like">LIKE</string>
     <string name="website">WEBSITE</string>
     <string name="not_connected">Not Connected</string>
+    <string name="permissions_text">to appear on map and use\n\"center on me\" button.</string>
 </resources>
 
