--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="preferences_gps_text">to appear on map and use \"center on me\" button.</string>
     <string name="preferences_clear_cache_description">use only if application feels slow</string>
     <string name="preferences_clear_cache_caption">Clear cache</string>
+    <string name="content_loading">Content loading</string>
 </resources>
 
