--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,15 +19,22 @@
     <string name="like">LIKE</string>
     <string name="website">WEBSITE</string>
     <string name="not_connected">Not Connected</string>
+    <string name="content_loading">Content loading</string>
 
-    <!-- Messages Preferences -->
-    <string name="preferences_theme_title">Application theme</string>
-    <string name="preferences_login_text">to share meals with your colleagues</string>
-    <string name="preferences_login_title">Login</string>
-    <string name="preferences_gps_title">Request GPS permission</string>
-    <string name="preferences_gps_text">to appear on map and use \"center on me\" button.</string>
+    <!-- Preferences -->
+    <string name="preferences_clear_cache_key">clear_cache</string>
     <string name="preferences_clear_cache_description">use only if application feels slow</string>
     <string name="preferences_clear_cache_caption">Clear cache</string>
-    <string name="content_loading">Content loading</string>
+    <string name="preferences_gps_key">gps</string>
+    <string name="preferences_gps_title">Request GPS permission</string>
+    <string name="preferences_gps_text">to appear on map and use \"center on me\" button.</string>
+    <string name="preferences_login_text">to share meals with your colleagues</string>
+    <string name="preferences_login_title">Login</string>
+    <string name="preferences_login_key">login</string>
+    <string name="preferences_theme_key">theme</string>
+    <string name="preferences_theme_key_system">system</string>
+    <string name="preferences_theme_key_light">light</string>
+    <string name="preferences_theme_key_dark">dark</string>
+    <string name="preferences_theme_title">Application theme</string>
 </resources>
 
