--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,9 @@
     <string name="preferences_theme_key_light">light</string>
     <string name="preferences_theme_key_dark">dark</string>
     <string name="preferences_theme_title">Application theme</string>
+    <string name="not_decided_yet"><![CDATA[<i><font color=\'grey\'>%s has not decided yet</font></i>]]></string>
+    <string name="chose_restaurant_pid">%s: chose restaurant id %s</string>
+    <string name="chose_restaurant_name">%s is eating at %s</string>
+    <string name="chose_restaurant_cuisine">%s is eating %s (%s)</string>
 </resources>
 
