--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,11 +20,12 @@
     <string name="not_connected">Not Connected</string>
     <string name="content_loading">Content loading</string>
     <string name="not_going_at_noon">Not going anywhere at noon</string>
+    <string name="cache_cleared">Cache cleared</string>
 
     <!-- Preferences -->
     <string name="preferences_clear_cache_key">clear_cache</string>
     <string name="preferences_clear_cache_description">use only if application feels slow</string>
-    <string name="preferences_clear_cache_caption">Clear cache</string>
+    <string name="preferences_clear_cache_caption">Clear cached POIs</string>
     <string name="preferences_notif_key">notifications</string>
     <string name="preferences_notif_title">Receive notifications at noon</string>
     <string name="preferences_notif_text">as a reminder of where you\'re taking lunch.</string>
@@ -40,5 +41,6 @@
     <string name="chose_restaurant_pid">%s: chose restaurant id %s</string>
     <string name="chose_restaurant_name">%s is eating at %s</string>
     <string name="chose_restaurant_cuisine">%s is eating %s (%s)</string>
+    <string name="address_unknown">address unknown</string>
 </resources>
 
