--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,36 +11,37 @@
     <string name="settings">SETTINGS</string>
     <string name="your_lunch">YOUR LUNCH</string>
     <string name="center_on_me">Center on me</string>
-    <string name="credits_text">© OpenStreetMap contributors\n(openstreetmap.org, nominatim.org)</string>
-    <string name="credits">Credits:</string>
-    <string name="going_at_noon">Going at noon</string>
-    <string name="call">CALL</string>
-    <string name="like">LIKE</string>
-    <string name="website">WEBSITE</string>
+    <string name="credits_text" translatable="false">© OpenStreetMap contributors\n(openstreetmap.org, nominatim.org)</string>
+    <string name="credits" translatable="false">Credits:</string>
+    <string name="going_at_noon" translatable="false">Going at noon</string>
+    <string name="call" translatable="false">CALL</string>
+    <string name="like" translatable="false">LIKE</string>
+    <string name="website" translatable="false">WEBSITE</string>
     <string name="not_connected">Not Connected</string>
-    <string name="content_loading">Content loading</string>
+    <string name="content_loading" translatable="false">Content loading</string>
     <string name="not_going_at_noon">Not going anywhere at noon</string>
     <string name="cache_cleared">Cache cleared</string>
-
-    <!-- Preferences -->
-    <string name="preferences_clear_cache_key">clear_cache</string>
-    <string name="preferences_clear_cache_description">use only if application feels slow</string>
-    <string name="preferences_clear_cache_caption">Clear cached POIs</string>
-    <string name="preferences_notif_key">notifications</string>
-    <string name="preferences_notif_title">Receive notifications at noon</string>
-    <string name="preferences_notif_text">as a reminder of where you\'re taking lunch.</string>
-    <string name="preferences_login_text">to share meals with your colleagues</string>
-    <string name="preferences_login_title">Login</string>
-    <string name="preferences_login_key">login</string>
-    <string name="preferences_theme_key">theme</string>
-    <string name="preferences_theme_key_system">system</string>
-    <string name="preferences_theme_key_light">light</string>
-    <string name="preferences_theme_key_dark">dark</string>
-    <string name="preferences_theme_title">Application theme</string>
     <string name="not_decided_yet"><![CDATA[<i><font color=\'grey\'>%s has not decided yet</font></i>]]></string>
     <string name="chose_restaurant_pid">%s: chose restaurant id %s</string>
     <string name="chose_restaurant_name">%s is eating at %s</string>
     <string name="chose_restaurant_cuisine">%s is eating %s (%s)</string>
     <string name="address_unknown">address unknown</string>
+
+
+    <!-- Preferences -->
+    <string name="preferences_clear_cache_key" translatable="false">clear_cache</string>
+    <string name="preferences_clear_cache_description">use only if application feels slow</string>
+    <string name="preferences_clear_cache_caption">Clear cached POIs</string>
+    <string name="preferences_notif_key" translatable="false">notifications</string>
+    <string name="preferences_notif_title">Receive notifications at noon</string>
+    <string name="preferences_notif_text">as a reminder of where you\'re taking lunch.</string>
+    <string name="preferences_login_text">to share meals with your colleagues</string>
+    <string name="preferences_login_title">Login</string>
+    <string name="preferences_login_key" translatable="false">login</string>
+    <string name="preferences_theme_key" translatable="false">theme</string>
+    <string name="preferences_theme_key_system">system</string>
+    <string name="preferences_theme_key_light">light</string>
+    <string name="preferences_theme_key_dark">dark</string>
+    <string name="preferences_theme_title">Application theme</string>
 </resources>
 
