--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Go4Lunch</string>
-    <string name="title_hungry">"I'm Hungry!"</string>
+    <string name="title_hungry">"I\'m Hungry!"</string>
     <string name="title_workmates">"Available workmates"</string>
     <string name="nav_1">Map View</string>
     <string name="nav_2">List View</string>
@@ -14,12 +14,16 @@
     <string name="not_connected">Not Connected</string>
     <string name="not_going_at_noon">Not going anywhere at noon</string>
     <string name="cache_cleared">Cache cleared</string>
-    <string name="not_decided_yet"><![CDATA[<i><font color=\'grey\'>%s has not decided yet</font></i>]]></string>
+    <string name="call">CALL</string>
+    <string name="like">LIKE</string>
+    <string name="website">WEBSITE</string>
+    <string name="address_unknown">address unknown</string>
+
+    <!-- mates list -->
+    <string name="not_decided_yet">%s has not decided yet</string>
     <string name="chose_restaurant_pid">%s: chose restaurant id %s</string>
     <string name="chose_restaurant_name">%s is eating at %s</string>
     <string name="chose_restaurant_cuisine">%s is eating %s (%s)</string>
-    <string name="address_unknown">address unknown</string>
-
 
     <!-- Preferences -->
     <string name="preferences_clear_cache_key" translatable="false">clear_cache</string>
@@ -42,17 +46,12 @@
     <string name="preferences_locale_key_english" translatable="false">english</string>
     <string name="preferences_locale_key_french" translatable="false">french</string>
 
-
     <!-- Non Translatable -->
     <string name="log_request_delay" translatable="false">delaying request by %s to be gentle on nominatim server</string>
     <string name="credits_text" translatable="false">© OpenStreetMap contributors\n(openstreetmap.org, nominatim.org)</string>
     <string name="credits" translatable="false">Credits:</string>
     <string name="going_at_noon" translatable="false">Going at noon</string>
-    <string name="call">CALL</string>
-    <string name="like">LIKE</string>
-    <string name="website">WEBSITE</string>
     <string name="content_loading" translatable="false">Content loading</string>
-    <string name="received_mates_pois">%d mates their POIs received and updated on view</string>
 
 
 </resources>
