search ground work, part worker migration for notification

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -38,5 +38,7 @@
     <string name="preferences_locale_value_english">utiliser l\'anglais</string>
     <string name="preferences_locale_value_french">utiliser le français</string>
     <string name="load_pois_in_this_zone">charger les POIs dans cette zone</string>
+    <string name="search_a_place">chercher un lieu</string>
+    <string name="search_a_mate">chercher un collègue</string>
 </resources>
 
