--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="address_unknown">address unknown</string>
     <string name="search_a_place">search a place</string>
     <string name="search_a_mate">search a mate</string>
+    <string name="dismiss">Dismiss</string>
 
     <!-- mates list -->
     <string name="not_decided_yet">%s has not decided yet</string>
