--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="search_a_place">search a place</string>
     <string name="search_a_mate">search a mate</string>
     <string name="dismiss">Dismiss</string>
+    <string name="hours_unknown">hours unknown</string>
 
     <!-- mates list -->
     <string name="not_decided_yet">%s has not decided yet</string>
