invoke() in UseCases, retry AuthorizationServiceConfiguration.fetchFromIssuer(), enable notifications from SettingsVM

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="going_at_noon" translatable="false">Going at noon</string>
     <string name="content_loading" translatable="false">Content loading</string>
     <string name="load_pois_in_this_zone">load POIs in this zone</string>
+    <string name="start_activity_timeout"><![CDATA[>2secs wait. Still no connection. Do not start activity]]></string>
 
 </resources>
 
