--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="content_loading" translatable="false">Content loading</string>
     <string name="load_pois_in_this_zone">load POIs in this zone</string>
     <string name="start_activity_timeout" translatable="false">&gt;2secs wait. Still no connection. Do not start activity</string>
+    <string name="endpoint_retreival_failed">failed to fetch endpoint configuration</string>
 
 </resources>
 
